[package]
name = "ryth-tempest"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
    "gzip",
    "brotli",
] }
scraper = "0.19"
robots_txt = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.5"
url = "2.5"
futures = "0.3"
sha2 = "0.10"
sled = "0.34"
thiserror = "1.0"
rand = "0.8"
bytes = "1.6"
tracing = "0.1"
hex = "0.4"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
